--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body style="height:100%;">
-    <canvas id="canvas" style="height:100%;"></canvas>
+<body">
+    <canvas id="canvas"></canvas>
     <script src="js/digit.js"></script>
     <script src="js/Gorgeous-clock.js"></script>
 </body>
